@@ -1,3 +1,9 @@
+2007-06-04  Vivien Malerba <malerba@gnome-db.org>
+
+	* libgda/gda-column.c: don't g_free() several times the same string
+	* libgda/gda-connection.c: correctly output the number of rows in a returned
+	data model when that number is not known
+
 2007-06-03  Vivien Malerba <malerba@gnome-db.org>
 
 	* libgda/gda-client.c: fixed gda_client_find_connection() where the first existing
